--- a/src/Books_read.html
+++ b/src/Books_read.html
@@ -2,109 +2,132 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books Read</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@1,9..40,300&family=Dancing+Script:wght@600&family=Dosis:wght@300&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <img src="./Images/Logo.jpg" alt="Logo" width="32" height="32"> 
-        <h1> Rediet Woudma </h1>
-        <img src="./Images/Nav.png" alt="Navigation" width="24" height="24">
+    <header class="header"><section class="header__nav">
+        <section class="name-logo"><img src="./Images/Logo.jpg" alt="Logo" width="50" height="50" class="header__logo"> 
+        <h1 id="name"> Rediet Woudma </h1></section>
+        <a href="#" class="toggle-button">
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+        </a></section>
+        <section class="nav-links">
+            <ul class="nav-links__list">
+                <li class="nav-links__item"><a href="./home.html">Home</a></li>
+                <li class="nav-links__item"><a href="./Hobby.html">Hobby</a></li>
+                <li class="nav-links__item"><a href="./Places_visited.html">Places visited</a></li>
+                <li class="nav-links__item"><a href="./Books_read.html">Books read</a></li>
+                <li class="nav-links__item"><a href="./Contributions.html">Contributions</a></li>
+            </ul></section>
     </header>
     <main>
-        <section id="Top">
-                <h2> <i>Books Read</i> </h2>
-                <blockquote> <em>Reading</em> is a passport to worlds unseen, where the mind embarks on scenic adventures and the imagination takes flight.</blockquote>
-            <img src="./Images/left_arrow.svg" alt="left arrow" width="24" height="24">
-            <img src="./Images/Books.jpg" alt="contributions" width="1000" height="150">
-            <a href="#Top"> Read More</a>
-            <img src="./Images/Right_arrow.svg" alt="right arrow" width="24" height="24"> 
-        </section>
-        <table>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Favorite Character</th>
-                <th>Memorable Quote</th>
+        <section class="books" class="sliding">
+            <h2 class="sliding__heading"> <i>Books read</i></h2>
+            <img src="../src/Images/left_arrow.svg" alt="left arrow" width="24" height="24" class="sliding__left ">
+            <blockquote id="blockquote"> <em>Reading</em> is a passport to worlds unseen, where the mind embarks on scenic adventures and the imagination takes flight.</blockquote>
+            <img src="../src/Images/Right_arrow.svg" alt="right arrow" width="24" height="24" class="sliding__right "> 
+            <a href="#Topbooks" class="sliding__link"> Read More</a>
+    </section>
+        <table class="table">
+            <tr class="table__row">
+                <th class="table__header">Title</th>
+                <th class="table__header">Author</th>
+                <th class="table__header">Favorite Character</th>
+                <th class="table__header">Memorable Quote</th>
             </tr>
-            <tr>
-                <td>The Alchemist </td>
-                <td>Paulo Coelho</td>
-                <td>Santiago</td>
-                <td>"And, when you want something, all the universe conspires in helping you to achieve it."</td>
+            <tr class="table__row">
+                <td class="table__data">The Alchemist </td>
+                <td class="table__data">Paulo Coelho</td>
+                <td class="table__data">Santiago</td>
+                <td class="table__data">"And, when you want something, all the universe conspires in helping you to achieve it."</td>
             </tr>
-            <tr>
-                <td>Atomic Habits</td>
-                <td>James Clear</td>
-                <td>N/A</td>
-                <td>"You do not rise to the level of your goals, you fall to the level of your systems."</td>
+            <tr class="table__row">
+                <td class="table__data">Atomic Habits</td>
+                <td class="table__data">James Clear</td>
+                <td class="table__data">N/A</td>
+                <td class="table__data">"You do not rise to the level of your goals, you fall to the level of your systems."</td>
             </tr>
-            <tr>
-                <td>What I Know for Sure</td>
-                <td>Oprah Winfrey</td>
-                <td>N/A</td>
-                <td>"The more you praise and celebrate your life, the more there is in life to celebrate."</td>
+            <tr class="table__row">
+                <td class="table__data">What I Know for Sure</td>
+                <td class="table__data">Oprah Winfrey</td>
+                <td class="table__data">N/A</td>
+                <td class="table__data">"The more you praise and celebrate your life, the more there is in life to celebrate."</td>
             </tr>
-            <tr>
-                <td> ሌላ ሰው</td>
-                <td> Dr Mihret Debebe </td>
-                <td> Mistere </td>
-                <td>"ጊዜ ከፈጣሪ ጋር የማይፈታው ችግር የሚፈጠረው፤ ለጊዜ ጊዜን መስጠት ሲሳነን ብቻ ነው"</td>
+            <tr class="table__row">
+                <td class="table__data"> ሌላ ሰው</td>
+                <td class="table__data"> Dr Mihret Debebe </td>
+                <td class="table__data"> ሚስጥር </td>
+                <td class="table__data">"ጊዜ ከፈጣሪ ጋር የማይፈታው ችግር የሚፈጠረው፤ ለጊዜ ጊዜን መስጠት ሲሳነን ብቻ ነው"</td>
             </tr>
-            <tr>
-                <td> Becoming </td>
-                <td> Michelle Obama </td>
-                <td> N/A </td>
-                <td>Now I think it’s one of the most useless questions an adult can ask a child—What do you want to be when you grow up? As if growing up is finite. As if at some point you become something and that’s the end.</td>
+            <tr class="table__row">
+                <td class="table__data"> Becoming </td>
+                <td class="table__data"> Michelle Obama </td>
+                <td class="table__data"> N/A </td>
+                <td class="table__data">"Now I think it&#39s one of the most useless questions an adult can ask a child—What do you want to be when you grow up? As if growing up is finite. As if at some point you become something and that&#39s the end."</td>
             </tr>
         </table>
-        <section>
-            <h3>The Alchemist </h3>
-            <img src="./Images/the_alchemist.jfif" alt="The alchemist" width="50" height="50">
+        <section class="Book">
+            <section class="bookname-cover">      
+                <h3>The Alchemist </h3>
+            <img src="./Images/the_alchemist.jfif" alt="The alchemist" width="50" height="50" class="book_cover"></section>
             <p>"The Alchemist" is a renowned novel written by Brazilian author Paulo Coelho. It tells the enchanting story of Santiago, a young shepherd who embarks on a journey of self-discovery and fulfillment. Throughout the pages of this inspiring book, Coelho weaves a tale that resonates with readers, imparting profound lessons along the way.
             <p>One lesson I took from "The Alchemist" is the importance of following one's dreams and listening to the desires of the heart. Santiago's pursuit of his personal legend, his ultimate purpose in life, encourages us to identify our own dreams and have the courage to pursue them relentlessly. Coelho's narrative reminds us that the universe conspires to help those who are committed to their dreams, and that through perseverance and faith, we can overcome obstacles and achieve our true destinies.</p>
             <p>Another significant lesson is the idea that the journey itself is as valuable as the destination. Santiago's encounters with various individuals and his experiences along his quest highlight the transformative power of embracing the present moment. Coelho invites readers to savor the beauty of the present, to be open to new experiences, and to trust in the process of life. "The Alchemist" reminds us that the lessons and growth we gain on our journey are often just as, if not more, important than the ultimate goal we seek.</p>
         </section>
         <section>
+            <section class="bookname-cover" id="Atomic_habit">  
             <h3> Atomic Habits</h3>
-            <img src="./Images/Atomic_habit.jfif" alt="Atomic habit" width="50" height="50">
+            <img src="./Images/Atomic_habit.jfif" alt="Atomic habit" width="50" height="50"></section>
             <p>"Atomic Habits" is a compelling read that highlights the extraordinary impact of small habits on our lives. James Clear's insights and practical advice serve as a roadmap for developing positive behaviors and achieving long-term success. By embracing the power of atomic habits, we can unlock our potential, cultivate lasting change, and ultimately live a more fulfilling and purpose-driven life.</p>
             <p>One of the key lessons I took from "Atomic Habits" is the concept of habit stacking. Clear emphasizes the importance of leveraging existing habits to create new ones. By identifying a current behavior and pairing it with a desired habit, we can seamlessly integrate positive actions into our lives. This approach allows us to tap into the power of momentum and make lasting changes more effectively. Whether it's tying a new habit to something as simple as brushing our teeth or incorporating it into our morning routine, habit stacking enables us to build a strong foundation for personal transformation and continuous improvement.</p>
         </section>
         <section>
+            <section class="bookname-cover">  
             <h3> What I know for sure</h3>
-            <img src="./Images/Oprah.jfif" alt="What I know for sure" width="50" height="50">
+            <img src="./Images/Oprah.jfif" alt="What I know for sure" width="50" height="50"></section>
             <p>"What I Know for Sure" is a profound and uplifting book by Oprah Winfrey that encapsulates her personal reflections and life lessons. Through a collection of heartfelt essays, Oprah shares her wisdom, experiences, and the truths she has come to embrace throughout her journey.</p>
                 <p>One of the core lessons I took from "What I Know for Sure" is the importance of gratitude. Oprah highlights the transformative power of cultivating a grateful mindset and appreciating the present moment. By acknowledging and expressing gratitude for the blessings in our lives, we can shift our perspective, invite more positivity, and find joy in the simplest of things.</p>
                 <p>Another key takeaway from the book is the significance of embracing authenticity and staying true to oneself. Oprah encourages readers to honor their own unique journeys, embrace their passions, and live with purpose and integrity. She emphasizes the importance of listening to our inner voice, following our intuition, and making choices that align with our values and aspirations.</p>
         </section>
         <section>
+            <section class="bookname-cover" id="lela_sew">  
             <h3> ሌላ ሰው</h3>
-            <img src="./Images/lela_sew.jfif" alt="Lela sew" width="50" height="50">
+            <img src="./Images/lela_sew.jfif" alt="Lela sew" width="50" height="50"></section>
             <p>"Lela Sew," a novel written by the renowned Ethiopian psychiatrist Dr. Mihret Debebe, captivated me with its exploration of human psychology. As I immersed myself in the pages of this psychological fiction, I encountered a rich tapestry of characters and their intricate relationships. The central theme of the book revolves around a psychologist who grapples with a profound dilemma between his dedication to his country and his family responsibilities.</p>
             <p>One of the core lessons I took from "Lela Sew" is the understanding of human nature and the intricacies of the human psyche. Through the characters' experiences and interactions, I delved into the depths of personality, motivations, and the complexities of human behavior. This exploration served as a reminder of the vast spectrum of emotions and desires that shape our actions and relationships. It highlighted the importance of empathy and compassion as we navigate the intricacies of our own minds and the minds of others.</p>
         </section>
         <section>
+            <section class="bookname-cover">  
             <h3> Becoming</h3>
-            <img src="./Images/Becoming.jfif" alt="Becoming" width="50" height="50">
+            <img src="./Images/Becoming.jfif" alt="Becoming" width="50" height="50"></section>
             <p>Through her heartfelt storytelling and genuine vulnerability, Obama shares her journey of self-discovery, personal growth, and the lessons she learned along the way.
                 One of the most significant lessons I took from "Becoming" is the importance of embracing our own voice and identity. Obama's authenticity and unwavering commitment to staying true to herself, despite the challenges and expectations she faced, inspired me to reflect on my own journey of self-acceptance. Her story reminded me that it is through embracing our unique stories and backgrounds that we can truly make a difference in the world.</p>
             <p>Another valuable lesson I gleaned from the book is the power of resilience and determination. Obama's unwavering belief in herself and her ability to overcome obstacles resonated deeply with me. Her story serves as a reminder that setbacks and failures are not roadblocks but opportunities for growth and learning. Through her example, I have been encouraged to persevere in the face of adversity and to never be afraid to pursue my dreams.</p>
         </section>
     </main>
-    <footer> 
+    <footer> <section class="left-for-two">
         <section><h4> Contact</h4>
-            <img src="./Images/email.svg" alt="email icon" width="24" height="24">
-            Redietwoudma@gmail.com<br>
-            <img src="./Images/phone.svg" alt="phone icon" width="24" height="24">
-            +251 912141567<br>
-            <a href="https://www.linkedin.com/yourprofile"><img src="./Images/linkedin.svg" alt="linkedin icon" width="24" height="24"></a>
-            <a href="https://www.instagram.com/yourprofile"><img src="./Images/instagram.svg" alt="instagram icon" width="24" height="24"></a>
-            <a href="https://www.telegram.com/yourprofile"><img src="./Images/telegram.svg" alt="telegram icon" width="24" height="24"></a>
-            <a href="https://www.whatsapp.com/yourprofile"><img src="./Images/whatsapp.svg" alt="whatsapp icon" width="24" height="24"></a>
-            </section>
-        <section>
+        <section class="contact-item"><img src="./Images/email.svg" alt="email icon" width="24" height="24">
+        Redietwoudma@gmail.com<br></section>
+        <section class="contact-item"><img src="./Images/phone.svg" alt="phone icon" width="24" height="24">
+        +251 912141567<br></section></section>
+        <section class="social-media">
+            <section class="icons1">
+        <a href="https://www.linkedin.com/in/rediet-woudma-1410692a2/" ><img src="./Images/linkedin.svg" alt="linkedin icon" width="24" height="24"></a>
+        <a href="https://www.instagram.com/?next=%2Fyourprofile%2F"><img src="./Images/instagram.svg" alt="instagram icon" width="24" height="24"></a></section>
+        <section class="icons2"><a href="https://t.me/Rediet_Woudma" ><img src="./Images/telegram.svg" alt="telegram icon" width="24" height="24"></a>
+        <a href="https://www.whatsapp.com/yourprofile" ><img src="./Images/whatsapp.svg" alt="whatsapp icon" width="24" height="24"></a></section>
+        </section></section>
+        <section class="quicklinks">
             <h4> Quick Links</h4>
-            <a href="./home.html"> Home</a><br>
+            <a href="./home.html" > Home</a><br>
             <a href="./Hobby.html">Hobby</a><br>
             <a href="./Places_visited.html">Places Visited</a><br>
             <a href="./Books_read.html">Books Read</a><br>
