--- a/src/Contributions.html
+++ b/src/Contributions.html
@@ -2,40 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contributions</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@1,9..40,300&family=Dancing+Script:wght@600&family=Dosis:wght@300&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <img src="./Images/Logo.jpg" alt="Logo" width="32" height="32"> 
-        <h1> Rediet Woudma </h1>
-        <img src="./Images/Nav.png" alt="Navigation" width="24" height="24">
+    <header class="header"><section class="header__nav">
+        <section class="name-logo"><img src="./Images/Logo.jpg" alt="Logo" width="50" height="50" class="header__logo"> 
+        <h1 id="name"> Rediet Woudma </h1></section>
+        <a href="#" class="toggle-button">
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+        </a></section>
+        <section class="nav-links">
+            <ul class="nav-links__list">
+                <li class="nav-links__item"><a href="./home.html">Home</a></li>
+                <li class="nav-links__item"><a href="./Hobby.html">Hobby</a></li>
+                <li class="nav-links__item"><a href="./Places_visited.html">Places visited</a></li>
+                <li class="nav-links__item"><a href="./Books_read.html">Books read</a></li>
+                <li class="nav-links__item"><a href="./Contributions.html">Contributions</a></li>
+            </ul></section>
     </header>
     <main>
-        <section id="Top">
-            <h2> <i>Contributions</i> </h2>
-            <blockquote> Life is not accumulation, it is <em>contribution</em>.</blockquote>
-            <img src="./Images/left_arrow.svg" alt="left arrow" width="24" height="24">
-            <img src="./Images/contibutions.jpg" alt="contributions" width="1000" height="150">
-            <a href="#Top"> Read More</a>
-            <img src="./Images/Right_arrow.svg" alt="right arrow" width="24" height="24"> 
+        <section class="contributions" class="sliding">
+            <h2 class="sliding__heading"> <i>Contributions</i> </h2>
+            <img src="./Images/left_arrow.svg" alt="left arrow" width="24" height="24" class="sliding__left ">
+            <blockquote id="blockquote"> Life is not accumulation, it is <em>contribution</em>.</blockquote>
+            <img src="./Images/Right_arrow.svg" alt="right arrow" width="24" height="24" class="sliding__right "> 
+            <a href="#Topcontributions" class="sliding__link"> Read More</a>
         </section>
         <section id="top">
-            <h3>Rac Debo</h3>
-            <p> As a dedicated member of the Rotary Club, I have made significant contributions in my roles.I have actively contributed to the Rotary Club by organizing and hosting joint sessions with other Rotary clubs. These collaborative sessions have provided opportunities for members from different clubs to come together, share ideas, and work collectively towards common goals. By facilitating these joint sessions, I have fostered a sense of unity and collaboration within the Rotary community, enabling us to make a greater impact on the causes we support.</p>
+            <h3>Rac Debo</h3><section class="rac-debo">
+            <section><p> As a dedicated member of the Rotary Club, I have made significant contributions in my roles.I have actively contributed to the Rotary Club by organizing and hosting joint sessions with other Rotary clubs. These collaborative sessions have provided opportunities for members from different clubs to come together, share ideas, and work collectively towards common goals. By facilitating these joint sessions, I have fostered a sense of unity and collaboration within the Rotary community, enabling us to make a greater impact on the causes we support.</p>
             <p>In my capacity as a Software Engineer, I have utilized my technical expertise to develop innovative solutions that have positively impacted the club's operations. I have worked diligently to automate processes, streamline communication channels, and enhance efficiency within the club, ultimately enabling smoother coordination and improved collaboration among members.
             Furthermore, as someone with a Bachelor of Laws degree, I have brought valuable legal insights to the Rotary Club. I have actively supported the club's initiatives by providing legal advice, reviewing contracts, and ensuring compliance with relevant laws and regulations. My legal background has enabled me to contribute to the club's decision-making processes and ensure that our actions align with ethical and legal standards.</p>
-            <figure><img src="./Images/rotary.jfif" alt="Rac debo">
+            </section>
+            <figure id="Racdebo"><img src="./Images/rotary.jfif" alt="Rac debo" width="300" >
             <figcaption> RAC Debo BOD members</figcaption></figure>
-        </section>
+        </section></section>
         <section>
-            <h3>Talent Search Campaign</h3>
-            <p>In Ethiopia, I have taken the initiative to organize a yearly talent search campaign specifically tailored for teenagers. This campaign, held during the summer, aims to discover and nurture the unique talents and abilities of young Ethiopian students. By providing a platform for aspiring teenagers to showcase their skills, whether in the arts, sports, academics, or other areas of interest, the talent search campaign promotes personal growth, self-confidence, and celebrates the rich talent within Ethiopia's youth.</p>
+            <h3>Talent Search Campaign</h3><section class="talent-search">
+            ,<section><p>In Ethiopia, I have taken the initiative to organize a yearly talent search campaign specifically tailored for teenagers. This campaign, held during the summer, aims to discover and nurture the unique talents and abilities of young Ethiopian students. By providing a platform for aspiring teenagers to showcase their skills, whether in the arts, sports, academics, or other areas of interest, the talent search campaign promotes personal growth, self-confidence, and celebrates the rich talent within Ethiopia's youth.</p>
             <p>As part of the talent search campaign in Ethiopia, we go beyond simply providing a platform for teenagers to showcase their talents. We recognize the immense value of mentorship and learning from successful experts in various fields. Therefore, we make it a point to invite accomplished professionals and experts to participate in the campaign. These experts, who have achieved success in their respective fields, are invited to share their experiences, insights, and wisdom with the participating youth.
                 By bringing in these successful experts, we create a unique opportunity for the youth to engage directly with established professionals. They have the chance to communicate, ask questions, and gain valuable guidance that can shape their own paths to success. This interaction fosters a sense of inspiration and motivation, as the young participants are exposed to real-life stories of achievement and are able to learn from those who have already walked the path they aspire to follow.
                 The presence of these successful experts adds an extra layer of significance to the talent search campaign in Ethiopia. It not only allows the youth to showcase their talents but also creates a platform for meaningful mentorship and knowledge exchange. By connecting aspiring teenagers with accomplished professionals, we foster a supportive environment where the youth can learn, grow, and be inspired to reach their full potential.</p>
-            <img src="./Images/talent2.jfif" alt="Speech" width="240" height="240">
+           </section> <img src="./Images/talent2.jfif" alt="Speech" width="240" height="240">
             <img src="./Images/talent3.jpg" alt="Speech 2" width="240" height="240">
-            </section>
+        </section></section>
         <section> 
             <h3> Professional support</h3>
             <p> As the owner of a tech company in Ethiopia, I am passionate about supporting organizations that provide assistance to the elderly, such as "Mekedoniya." Through my company, I offer free services in website design and database maintenance to help enhance their operations and outreach efforts.
@@ -45,20 +62,22 @@
                 extending our support to other helping organizations as well. We recognize the importance of embracing technology to amplify the impact of such organizations and enhance their ability to serve their respective communities.</p>
         </section>
     </main>
-    <footer> 
+    <footer> <section class="left-for-two">
         <section><h4> Contact</h4>
-            <img src="./Images/email.svg" alt="email icon" width="24" height="24">
-            Redietwoudma@gmail.com<br>
-            <img src="./Images/phone.svg" alt="phone icon" width="24" height="24">
-            +251 912141567<br>
-            <a href="https://www.linkedin.com/yourprofile"><img src="./Images/linkedin.svg" alt="linkedin icon" width="24" height="24"></a>
-            <a href="https://www.instagram.com/yourprofile"><img src="./Images/instagram.svg" alt="instagram icon" width="24" height="24"></a>
-            <a href="https://www.telegram.com/yourprofile"><img src="./Images/telegram.svg" alt="telegram icon" width="24" height="24"></a>
-            <a href="https://www.whatsapp.com/yourprofile"><img src="./Images/whatsapp.svg" alt="whatsapp icon" width="24" height="24"></a>
-            </section>
-        <section>
+        <section class="contact-item"><img src="./Images/email.svg" alt="email icon" width="24" height="24">
+        Redietwoudma@gmail.com<br></section>
+        <section class="contact-item"><img src="./Images/phone.svg" alt="phone icon" width="24" height="24">
+        +251 912141567<br></section></section>
+        <section class="social-media">
+            <section class="icons1">
+        <a href="https://www.linkedin.com/in/rediet-woudma-1410692a2/" ><img src="./Images/linkedin.svg" alt="linkedin icon" width="24" height="24"></a>
+        <a href="https://www.instagram.com/?next=%2Fyourprofile%2F"><img src="./Images/instagram.svg" alt="instagram icon" width="24" height="24"></a></section>
+        <section class="icons2"><a href="https://t.me/Rediet_Woudma" ><img src="./Images/telegram.svg" alt="telegram icon" width="24" height="24"></a>
+        <a href="https://www.whatsapp.com/yourprofile" ><img src="./Images/whatsapp.svg" alt="whatsapp icon" width="24" height="24"></a></section>
+        </section></section>
+        <section class="quicklinks">
             <h4> Quick Links</h4>
-            <a href="./home.html"> Home</a><br>
+            <a href="./home.html" > Home</a><br>
             <a href="./Hobby.html">Hobby</a><br>
             <a href="./Places_visited.html">Places Visited</a><br>
             <a href="./Books_read.html">Books Read</a><br>
