--- a/src/Hobby.html
+++ b/src/Hobby.html
@@ -2,51 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobby</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@1,9..40,300&family=Dancing+Script:wght@600&family=Dosis:wght@300&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <img src="./Images/Logo.jpg" alt="Logo" width="32" height="32"> 
-        <h1> Rediet Woudma </h1>
-        <img src="./Images/Nav.png" alt="Navigation" width="24" height="24">
+    <header class="header"><section class="header__nav">
+        <section class="name-logo"><img src="./Images/Logo.jpg" alt="Logo" width="50" height="50" class="header__logo"> 
+        <h1 id="name"> Rediet Woudma </h1></section>
+        <a href="#" class="toggle-button">
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+        </a></section>
+        <section class="nav-links">
+            <ul class="nav-links__list">
+                <li class="nav-links__item"><a href="./home.html">Home</a></li>
+                <li class="nav-links__item"><a href="./Hobby.html">Hobby</a></li>
+                <li class="nav-links__item"><a href="./Places_visited.html">Places visited</a></li>
+                <li class="nav-links__item"><a href="./Books_read.html">Books read</a></li>
+                <li class="nav-links__item"><a href="./Contributions.html">Contributions</a></li>
+            </ul></section>
     </header>
     <main>
-        <section id="Top">
-            <h2> <i>Hobby</i></h2>
-            <blockquote> We are what we repeatedly do, <i>Excellence</i>, then is not an act but a <em>habit</em>.</blockquote>
-            <img src="./Images/left_arrow.svg" alt="left arrow" width="24" height="24">
-            <img src="./Images/hobby.jpg" alt="Hobby" width="1000" height="250">
-            <a href="#Top"> Read More</a>
-            <img src="./Images/Right_arrow.svg" alt="right arrow" width="24" height="24"> 
-        </section>
-        <section>
-                <h3> Horse Riding</h3>
+        <section class="hobby" class="sliding">
+            <h2 class="sliding__heading"> <i>Hobby</i></h2>
+            <img src="../src/Images/left_arrow.svg" alt="left arrow" width="24" height="24" class="sliding__left ">
+            <blockquote id="blockquote"> We are what we repeatedly do, <i>Excellence</i>, then is not an act but a <em>habit</em>.</blockquote>
+            <img src="../src/Images/Right_arrow.svg" alt="right arrow" width="24" height="24" class="sliding__right"> 
+            <a href="#Tophobby" class="sliding__link"> Read More</a></section>
+        <section><section class="horse-riding">
+                <figure>
+                    <img src="./Images/Horse_riding.jpg" alt="Horse riding" width="250" height="150">
+                    <figcaption> Horse riding</figcaption>
+                </figure>
+                <section><h3> Horse Riding</h3>
                 <p>Horse riding is a captivating hobby that holds a special place in my heart, even though I may not have the opportunity to indulge in it as often as I'd like. The bond between a rider and their horse is an extraordinary connection that transcends words, creating a profound sense of unity and harmony.
                     Whenever I mount a horse, I am instantly transported to a world of tranquility and freedom. The rhythmic sound of hooves, the gentle sway of the saddle, and the subtle communication between rider and steed create an unmatched sense of serenity. It is in these moments that I feel truly alive and in tune with nature.</p>
                 <p> The love I have for horse riding stems from the remarkable bond that forms between myself and these majestic creatures. Horses possess an innate wisdom and grace that is both humbling and awe-inspiring. Through patient and gentle guidance, I have learned to navigate their powerful movements, forging a connection built on mutual trust and respect.
                     While my opportunities for horse riding may be limited, each experience becomes a cherished memory</p>
                 <p>Horse riding teaches me valuable lessons of patience, discipline, and empathy. It reminds me of the importance of listening, not just to the horse's cues, but also to the subtle messages conveyed by the natural world around us. It is a constant reminder of the beauty of simplicity and the profound impact that gentle communication can have.
                     Though I may not have the chance to indulge in horse riding as frequently as I desire, the love I hold for this hobby remains unwavering.</p>
-                <figure>
-                    <img src="./Images/Horse_riding.jpg" alt="Horse riding" width="250" height="150">
-                    <figcaption> Horse riding</figcaption>
-                </figure>
+                </section></section>
             <article> 
                 <h3> Coding</h3>
                 <p>As a software engineer, coding is not only a hobby but also an integral part of my professional life. It is a skill that I have honed and continue to develop as I navigate the ever-evolving landscape of technology and software development.
                     Coding is the foundation of my work as a software engineer, enabling me to design, develop, and implement various software solutions. It is through coding that I bring ideas to life, creating functional and efficient applications, systems, and websites that meet the needs of users and clients.</p>
                 <p>The joy I find in coding extends beyond my professional responsibilities. Even outside of work, I still engage in coding projects and personal coding endeavors, exploring new technologies, experimenting with different programming languages, and staying up to date with industry trends. This continuous learning and exploration fuel my passion for coding and propel me forward in my career.</p>
             </article>
-            <article> 
-                <h3> Playing Guitar</h3>
-                <p> Playing the acoustic guitar has been a delightful and fulfilling hobby for me, allowing me to embrace the joy of music purely for personal enjoyment. My journey began when I stumbled upon the mesmerizing melodies of Henok Temesgen, an exceptional guitarist from Ethiopia, whose music struck a chord deep within my soul. Inspired by his unique style, I embarked on a self-taught exploration of the acoustic guitar.
-                    Driven by passion and curiosity, I immersed myself in the world of chords, strums, and fingerpicking patterns. Tracy Chapman, with her soulful tunes and captivating storytelling, also played a significant role in shaping my musical aspirations. Her ability to convey raw emotions through her acoustic guitar playing resonated deeply with me.</p>
-                    <p>As a self-taught guitarist, I embarked on a personal adventure of discovery. Guided by the melodies that stirred my heart, I spent countless hours experimenting, learning, and honing my skills. From the gentle harmonies of folk music to the infectious rhythms of blues, I found solace and inspiration in the strings of my acoustic guitar.
-                    Playing solely for my own pleasure, the guitar has become my trusted companion throughout life's journey.</p>
+            <article class="guitar"> 
                 <figure><audio controls>
                     <source src="./Images/guitar_audio.ogg" type="audio/ogg">
                 </audio>
                 <figcaption> My trial of 'ከተራራው ማዶ'</figcaption></figure>
+                <section><h3> Playing Guitar</h3>
+                <p> Playing the acoustic guitar has been a delightful and fulfilling hobby for me, allowing me to embrace the joy of music purely for personal enjoyment. My journey began when I stumbled upon the mesmerizing melodies of Henok Temesgen, an exceptional guitarist from Ethiopia, whose music struck a chord deep within my soul. Inspired by his unique style, I embarked on a self-taught exploration of the acoustic guitar.
+                    Driven by passion and curiosity, I immersed myself in the world of chords, strums, and fingerpicking patterns. Tracy Chapman, with her soulful tunes and captivating storytelling, also played a significant role in shaping my musical aspirations. Her ability to convey raw emotions through her acoustic guitar playing resonated deeply with me.</p>
+                <p> As a self-taught guitarist, I embarked on a personal adventure of discovery. Guided by the melodies that stirred my heart, I spent countless hours experimenting, learning, and honing my skills. From the gentle harmonies of folk music to the infectious rhythms of blues, I found solace and inspiration in the strings of my acoustic guitar.
+                    Playing solely for my own pleasure, the guitar has become my trusted companion throughout life's journey.</p>
+                </section>
                 </article>
             <article>
                 <h3> Ground Tennis</h3>
@@ -63,20 +80,22 @@
             
         </section>
     </main>
-    <footer> 
+    <footer> <section class="left-for-two">
         <section><h4> Contact</h4>
-        <img src="./Images/email.svg" alt="email icon" width="24" height="24">
-        Redietwoudma@gmail.com<br>
-        <img src="./Images/phone.svg" alt="phone icon" width="24" height="24">
-        +251 912141567<br>
-        <a href="https://www.linkedin.com/yourprofile"><img src="./Images/linkedin.svg" alt="linkedin icon" width="24" height="24"></a>
-        <a href="https://www.instagram.com/yourprofile"><img src="./Images/instagram.svg" alt="instagram icon" width="24" height="24"></a>
-        <a href="https://www.telegram.com/yourprofile"><img src="./Images/telegram.svg" alt="telegram icon" width="24" height="24"></a>
-        <a href="https://www.whatsapp.com/yourprofile"><img src="./Images/whatsapp.svg" alt="whatsapp icon" width="24" height="24"></a>
-        </section>
-        <section>
+        <section class="contact-item"><img src="./Images/email.svg" alt="email icon" width="24" height="24">
+        Redietwoudma@gmail.com<br></section>
+        <section class="contact-item"><img src="./Images/phone.svg" alt="phone icon" width="24" height="24">
+        +251 912141567<br></section></section>
+        <section class="social-media">
+            <section class="icons1">
+        <a href="https://www.linkedin.com/in/rediet-woudma-1410692a2/" ><img src="./Images/linkedin.svg" alt="linkedin icon" width="24" height="24"></a>
+        <a href="https://www.instagram.com/?next=%2Fyourprofile%2F"><img src="./Images/instagram.svg" alt="instagram icon" width="24" height="24"></a></section>
+        <section class="icons2"><a href="https://t.me/Rediet_Woudma" ><img src="./Images/telegram.svg" alt="telegram icon" width="24" height="24"></a>
+        <a href="https://www.whatsapp.com/yourprofile" ><img src="./Images/whatsapp.svg" alt="whatsapp icon" width="24" height="24"></a></section>
+        </section></section>
+        <section class="quicklinks">
             <h4> Quick Links</h4>
-            <a href="./home.html"> Home</a><br>
+            <a href="./home.html" > Home</a><br>
             <a href="./Hobby.html">Hobby</a><br>
             <a href="./Places_visited.html">Places Visited</a><br>
             <a href="./Books_read.html">Books Read</a><br>
