--- a/src/Books_read.html
+++ b/src/Books_read.html
@@ -28,13 +28,52 @@
             </ul></section>
     </header>
     <main>
-        <section class="books" class="sliding">
-            <h2 class="sliding__heading"> <i>Books read</i></h2>
-            <img src="../src/Images/left_arrow.svg" alt="left arrow" width="24" height="24" class="sliding__left ">
-            <blockquote id="blockquote"> <em>Reading</em> is a passport to worlds unseen, where the mind embarks on scenic adventures and the imagination takes flight.</blockquote>
-            <img src="../src/Images/Right_arrow.svg" alt="right arrow" width="24" height="24" class="sliding__right "> 
-            <a href="#Topbooks" class="sliding__link"> Read More</a>
-    </section>
+        <section class="slider">
+            <section class="list">
+                <section class="item">
+                    <section class="home inner">
+                    <h2 class="topic"><a href="Home.html" ><i> Home</i> </a> </h2>
+            <blockquote class="blockquote"> Shoot for the moon even when you <i>miss</i> it you will land among the stars</blockquote>
+            </section>
+                </section>
+                <section class="item">
+                    <section class="hobby inner">
+                    <h2 class="topic"><a href="Hobby.html"> <i>Hobby</i></a> </h2>
+            <blockquote class="blockquote"> We are what we repeatedly do, <i>Excellence</i>, then is not an act but a <em>habit</em>.</blockquote>
+            </section>
+                </section>
+                <section class="item">
+                    <section class="places-visited inner">
+                    <h2 class="topic"> <a href="./Places_visited.html" class="readmore" > <i>Places Visited</i></a></h2>
+            <blockquote class="blockquote"> Where to <i>next</i>? </blockquote>   
+            </section>
+                </section>
+                <section class="item">
+                    <section class="books inner">
+                    <h2 class="topic"> <a href="./Books_read.html" class="readmore"> <i>Books read</i></a></h2>
+                    <blockquote class="blockquote"> <em>Reading</em> is a passport to worlds unseen, where the mind embarks on scenic adventures and the imagination takes flight.</blockquote>
+                    </section>
+                </section>
+                <section class="item">
+                    <section class="contributions inner">
+                    <h2 class="topic"><a href="./Contributions.html" class="readmore"> <i>Contributions</i> </a> </h2>
+            <blockquote class="blockquote"> Life is not accumulation, it is <em>contribution</em>.</blockquote>
+            </section>
+                </section>
+            </section>
+            <section class="buttons">
+                <button id="prev">&lt;</button>
+                <button id="next">></button>
+            </section>
+            <ul class="dots">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <script src="./js/script.js"></script>
         <table class="table">
             <tr class="table__row">
                 <th class="table__header">Title</th>
@@ -70,7 +109,7 @@
                 <td class="table__data"> Becoming </td>
                 <td class="table__data"> Michelle Obama </td>
                 <td class="table__data"> N/A </td>
-                <td class="table__data">"Now I think it&#39s one of the most useless questions an adult can ask a child—What do you want to be when you grow up? As if growing up is finite. As if at some point you become something and that&#39s the end."</td>
+                <td class="table__data">"Now I think it&#39;s one of the most useless questions an adult can ask a child—What do you want to be when you grow up? As if growing up is finite. As if at some point you become something and that&#39; the end."</td>
             </tr>
         </table>
         <section class="Book">
