--- a/src/Places_visited.html
+++ b/src/Places_visited.html
@@ -28,13 +28,52 @@
             </ul></section>
     </header>
     <main>
-        <section class="places-visited" class="sliding">
-            <h2 class="sliding__heading"> <i>Places Visited</i></h2>
-            <img src="../src/Images/left_arrow.svg" alt="left arrow" width="24" height="24" class="sliding__left ">
-        <blockquote id="blockquotep"> Where to <i>next</i>? </blockquote>   
-        <img src="../src/Images/Right_arrow.svg" alt="right arrow" width="24" height="24" class="sliding__right"> 
-            <a href="#Topplacesvisited" class="sliding__link"> Read More</a>      
-</section>
+        <section class="slider">
+            <section class="list">
+                <section class="item">
+                    <section class="home inner">
+                    <h2 class="topic"><a href="Home.html" ><i> Home</i> </a> </h2>
+            <blockquote class="blockquote"> Shoot for the moon even when you <i>miss</i> it you will land among the stars</blockquote>
+            </section>
+                </section>
+                <section class="item">
+                    <section class="hobby inner">
+                    <h2 class="topic"><a href="Hobby.html"> <i>Hobby</i></a> </h2>
+            <blockquote class="blockquote"> We are what we repeatedly do, <i>Excellence</i>, then is not an act but a <em>habit</em>.</blockquote>
+            </section>
+                </section>
+                <section class="item">
+                    <section class="places-visited inner">
+                    <h2 class="topic"> <a href="./Places_visited.html" class="readmore" > <i>Places Visited</i></a></h2>
+            <blockquote class="blockquote"> Where to <i>next</i>? </blockquote>   
+            </section>
+                </section>
+                <section class="item">
+                    <section class="books inner">
+                    <h2 class="topic"> <a href="./Books_read.html" class="readmore"> <i>Books read</i></a></h2>
+                    <blockquote class="blockquote"> <em>Reading</em> is a passport to worlds unseen, where the mind embarks on scenic adventures and the imagination takes flight.</blockquote>
+                    </section>
+                </section>
+                <section class="item">
+                    <section class="contributions inner">
+                    <h2 class="topic"><a href="./Contributions.html" class="readmore"> <i>Contributions</i> </a> </h2>
+            <blockquote class="blockquote"> Life is not accumulation, it is <em>contribution</em>.</blockquote>
+            </section>
+                </section>
+            </section>
+            <section class="buttons">
+                <button id="prev">&lt;</button>
+                <button id="next">></button>
+            </section>
+            <ul class="dots">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <script src="./js/script.js"></script>
         <h3> Lalibela | Ethiopia</h3>
             <section class="lalibela">
             <p> My journey from Addis Ababa to Lalibela was a deeply enriching and pride-filled experience.,The rolling hills, majestic mountains, and lush valleys reminded me of Ethiopia's natural beauty and the rich tapestry of our land.
