--- a/src/home.html
+++ b/src/home.html
@@ -8,16 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@1,9..40,300&family=Dancing+Script:wght@600&family=Dosis:wght@300&family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    
 </head>
 <body>
     <header class="header"><section class="header__nav">
         <section class="name-logo"><img src="./Images/Logo.jpg" alt="Logo" width="50" height="50" class="header__logo"> 
-        <h1 class="header__logo"> Rediet Woudma </h1></section>
-        <a href="#" class="toggle-button">
+        <h1 id="name"> Rediet Woudma </h1></section>
+        <button class="toggle-button">
             <span class="toggle-button__bar"></span>
             <span class="toggle-button__bar"></span>
             <span class="toggle-button__bar"></span>
-        </a></section>
+        </button></section>
         <section class="nav-links">
             <ul class="nav-links__list">
                 <li class="nav-links__item"><a href="./home.html">Home</a></li>
@@ -28,13 +29,52 @@
             </ul></section>
     </header>
     <main>
-        <section class="home" class="sliding">
-            <h2 class="sliding__heading"> <i>Home</i></h2>
-                <img src="../src/Images/left_arrow.svg" alt="left arrow" width="24" height="24" class="sliding__left ">
-                <blockquote id="blockquote"> Shoot for the moon even when you <i>miss</i> it you will land among the stars</blockquote>
-             <img src="../src/Images/Right_arrow.svg" alt="right arrow" width="24" height="24" class="sliding__right"> 
-            <a href="#Tophome" class="sliding__link"> Read More</a>
+        <section class="slider">
+            <section class="list">
+                <section class="item">
+                    <section class="home inner">
+                    <h2 class="topic"><a href="Home.html" ><i> Home</i> </a> </h2>
+            <blockquote class="blockquote"> Shoot for the moon even when you <i>miss</i> it you will land among the stars</blockquote>
+            </section>
+                </section>
+                <section class="item">
+                    <section class="hobby inner">
+                    <h2 class="topic"><a href="Hobby.html"> <i>Hobby</i></a> </h2>
+            <blockquote class="blockquote"> We are what we repeatedly do, <i>Excellence</i>, then is not an act but a <em>habit</em>.</blockquote>
+            </section>
+                </section>
+                <section class="item">
+                    <section class="places-visited inner">
+                    <h2 class="topic"> <a href="./Places_visited.html" class="readmore" > <i>Places Visited</i></a></h2>
+            <blockquote class="blockquote"> Where to <i>next</i>? </blockquote>   
+            </section>
+                </section>
+                <section class="item">
+                    <section class="books inner">
+                    <h2 class="topic"> <a href="./Books_read.html" class="readmore"> <i>Books read</i></a></h2>
+                    <blockquote class="blockquote"> <em>Reading</em> is a passport to worlds unseen, where the mind embarks on scenic adventures and the imagination takes flight.</blockquote>
+                    </section>
+                </section>
+                <section class="item">
+                    <section class="contributions inner">
+                    <h2 class="topic"><a href="./Contributions.html" class="readmore"> <i>Contributions</i> </a> </h2>
+            <blockquote class="blockquote"> Life is not accumulation, it is <em>contribution</em>.</blockquote>
+            </section>
+                </section>
+            </section>
+            <section class="buttons">
+                <button id="prev">&lt;</button>
+                <button id="next">></button>
+            </section>
+            <ul class="dots">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
+        
         <section>
             <h2> Professional Summary </h2>
             <p> Versatile software engineering graduate with a degree in law, combining technical proficiency and legal knowledge to deliver innovative solutions. Strong project management skills, adept at navigating complex regulations, and ensuring compliance. Effective collaborator and problem-solver, with a passion for staying current in both software engineering and legal practices.</p>
@@ -110,5 +150,6 @@
             <a href="./Contributions.html">Contributions</a><br>
         </section>
     </footer>
+    <script defer src="./js/script.js"></script>
 </body>
 </html>
